# oscgard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gui/: main.cpp  window.cpp  window.hpp  window.ui
src/: action.cpp  action.hpp  actions.cpp  actions.hpp  args.cpp  args.hpp  command.cpp  command.hpp  main.cpp  server.cpp  server.hpp  settings.cpp  settings.hpp  system.cpp  system.hpp  types.hpp  util.cpp  util.hpp
systemd/: oscgard-system.service  oscgard-user.service
